@@ -5,6 +5,9 @@
           difference % difference => underlying type, and
           difference % underlying type => difference.
 
+        * strong::difference is now strong::equality comparable in addition
+          to being strong::ordered
+
 v3 2021-08-02
 
         * increment/decrement operators are now hidden friends
